1340: Contrast issue on link

--- a/web/themes/custom/hoeringsportal/assets/css/module/_info_box.scss
+++ b/web/themes/custom/hoeringsportal/assets/css/module/_info_box.scss
@@ -9,7 +9,7 @@
     --bg-color: #{$yellow-100};
     --secondary-bg-color: #{$yellow-200};
     --text-color: #{$yellow-900};
-    --link-color: #{$yellow-700};
+    --link-color: #{$yellow-800};
   }
   &.info {
     --bg-color: #{$blue-100};
